Changing angle bracket codes in a pre tag.

--- a/_posts/2010-07-21-new-entitlements-plist-requirement-for-app-submission.textile
+++ b/_posts/2010-07-21-new-entitlements-plist-requirement-for-app-submission.textile
@@ -9,7 +9,7 @@ bq. *Invalid application-identifier Entitlement* – This error can occur if the
 
 While the message suggests the issue is with the Info.plist, it turns out that the issue was with my entitlements.plist file; Apple are requiring some new keys in the entitlements.plist file which I didn't have from my last submission. My new entitlements.plist now contains the following:
 
-<pre>&lt;dict&gt;
+<pre><dict>
     &lt;key&gt;application-identifier&lt;/key&gt;
     &lt;string&gt;$(AppIdentifierPrefix)$(CFBundleIdentifier)&lt;/string&gt;
     &lt;key&gt;keychain-access-groups&lt;/key&gt;
