Formatted for textile.

--- a/contact/index.textile
+++ b/contact/index.textile
@@ -3,6 +3,6 @@ layout: post
 title: Contact Details
 ---
 
-<p>If you'd like to email me you can do so with the email address: dt (just my initials) at (you know, the @ sign) danieltull.co.uk. Hopefully this makes sense to you, but not the nasty spambots out there, though I guess they'll have had this programmed for too nowadays.</p>
+If you'd like to email me you can do so with the email address: dt (just my initials) at (you know, the @ sign) danieltull.co.uk. Hopefully this makes sense to you, but not the nasty spambots out there, though I guess they'll have had this programmed for too nowadays.
                        
-<p>Another way of getting my attention could be to mention me on <a href="http://www.twitter.com/danielctull">Twitter</a>.</p>
+Another way of getting my attention could be to mention me on "Twitter":http://www.twitter.com/danielctull.
