--- a/code/index.textile
+++ b/code/index.textile
@@ -7,20 +7,23 @@ This page lists an overview of my Cocoa open source code. It has all been writte
 
 Please email me to say you've used my code; It'll pretty much make my day if I have kinds words in my inbox to read over breakfast!
 
-h2. Donations
+<blockquote>
+	h2. Donations
 
-While you are free to use this code as you please, it takes time and effort to write and manage code. I'm very appreciative to any donations that may come my way. Below is a button that will allow you to send me money using PayPal.
+	While you are free to use this code as you please, it takes time and effort to write and manage code. I'm very appreciative to any donations that may come my way. Below is a button that will allow you to send me money using PayPal.
 
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_donations">
-<input type="hidden" name="business" value="8DT2ZJ6UXQFZQ">
-<input type="hidden" name="lc" value="GB">
-<input type="hidden" name="item_name" value="Daniel Tull's Code">
-<input type="hidden" name="currency_code" value="GBP">
-<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
-<input type="image" src="https://www.paypal.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
-<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-</form>
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+	<input type="hidden" name="cmd" value="_donations">
+	<input type="hidden" name="business" value="8DT2ZJ6UXQFZQ">
+	<input type="hidden" name="lc" value="GB">
+	<input type="hidden" name="item_name" value="Daniel Tull's Code">
+	<input type="hidden" name="currency_code" value="GBP">
+	<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
+	<input type="image" src="https://www.paypal.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
+	<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+	</form>
+
+</blockquote>
 
 h2. DCTCoreData
 
