--- a/code/index.textile
+++ b/code/index.textile
@@ -13,15 +13,17 @@ Please email me to say you've used my code; It'll pretty much make my day if I h
 
 			While you are free to use this code as you please, it takes time and effort to write and manage code. I'm very appreciative to any donations that may come my way. Below is a button that will allow you to send me money using PayPal.
 
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-		<input type="hidden" name="cmd" value="_donations">
-		<input type="hidden" name="business" value="8DT2ZJ6UXQFZQ">
-		<input type="hidden" name="lc" value="GB">
-		<input type="hidden" name="item_name" value="Daniel Tull's Code">
-		<input type="hidden" name="currency_code" value="GBP">
-		<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
-		<input class="paypalbutton" type="image" src="https://www.paypal.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
-		</form>
+			<div class="paypalbutton">
+				<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+			<input type="hidden" name="cmd" value="_donations">
+			<input type="hidden" name="business" value="8DT2ZJ6UXQFZQ">
+			<input type="hidden" name="lc" value="GB">
+			<input type="hidden" name="item_name" value="Daniel Tull's Code">
+			<input type="hidden" name="currency_code" value="GBP">
+			<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
+			<input type="image" src="https://www.paypal.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
+			</form>
+		</div>
 	</div>
 </div>
 
