--- a/_posts/2010-11-17-tint-calc.textile
+++ b/_posts/2010-11-17-tint-calc.textile
@@ -7,7 +7,7 @@ For a while I have had an issue while contracting. The method used to customise 
 
 And that's exactly what "Tint Calc":http://dnl.tl/TintCalc is all about.
 
-<img class=" aligncenter" src="../../../../../images/tint-calc/1.0.png" alt="Tint Calc's main screen" width="320" height="460" />
+<img class=" aligncenter" src="/images/tint-calc/1.0.png" alt="Tint Calc's main screen" width="320" height="460" />
 
 Tint Calc also allows you to save colours you like and, of course, there's a shake to shuffle colour randomiser.
 
