Add radar number to the post

--- a/_posts/2011-04-20-xcode-4-and-creating-nsmanagedobject-subclasses.textile
+++ b/_posts/2011-04-20-xcode-4-and-creating-nsmanagedobject-subclasses.textile
@@ -16,3 +16,5 @@ Eventually I got around to looking at the Core Data utility pane, where it gave 
 You should check to make sure you really are using the class you've written by looking in the Core Data utility pane while an entity is selected. There you will find the text field to change the class from NSManagedObject as shown below.
 
 <img class=" aligncenter" src="/images/2011-04-20-xcode-4-and-creating-nsmanagedobject-subclasses/1.png" alt="Apropriately named class in the Core Data utility pane" width="279" height="168" />
+
+Update: As I consider this a bug with Xcode 4, I've filed a bug, rdar://9313900.
