--- a/wwdcnoqueue/index.textile
+++ b/wwdcnoqueue/index.textile
@@ -15,4 +15,4 @@ Place: "Lori's Diner on Mason Street":http://lorisdiner.com/drink/item/location/
 Date: Monday 10th June 2013
 Time: 8am - 10am PDT
 
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;aq=0&amp;oq=Lori's+Diner+Mason&amp;sll=37.786843,-122.4097&amp;sspn=0.002446,0.005284&amp;ie=UTF8&amp;hq=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;ll=37.78685,-122.409692&amp;spn=0.017636,0.032015&amp;t=m&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;aq=0&amp;oq=Lori's+Diner+Mason&amp;sll=37.786843,-122.4097&amp;sspn=0.002446,0.005284&amp;ie=UTF8&amp;hq=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;ll=37.78685,-122.409692&amp;spn=0.017636,0.032015&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;aq=0&amp;oq=Lori's+Diner+Mason&amp;sll=37.786843,-122.4097&amp;sspn=0.002446,0.005284&amp;ie=UTF8&amp;hq=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;ll=37.78685,-122.409692&amp;spn=0.017636,0.032015&amp;t=m&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;aq=0&amp;oq=Lori's+Diner+Mason&amp;sll=37.786843,-122.4097&amp;sspn=0.002446,0.005284&amp;ie=UTF8&amp;hq=Lori's+Diner,+Mason+Street,+San+Francisco,+CA,+United+States&amp;ll=37.78685,-122.409692&amp;spn=0.017636,0.032015&amp;t=m">View Larger Map</a></small>
